Fixed layout bug in CRUD
Prevent footer from percolating up to previous DIV element by
adding body to a DIV tag thus making it close like a normal DIV
does.

--- a/css/style.css
+++ b/css/style.css
@@ -257,6 +257,9 @@ img#schema {
 .yui-skin-sam .yui-panel .bd, .yui-skin-sam .yui-panel .ft {
 	background-color:#FFFFFF;
 }
+.yui-skin-sam .yui-navset .yui-content {
+	padding:2em 1em 1em 1em;
+}
 /************* tmp drag-drop ******************/
 div.workarea {
 	float:left;
